Cambiando el ícono del perrito

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     <!-- Adoptame -->
     <section class="adoptame">
       <div class="container">
-        <h2 class="adoptame-title">Adoptame 🐾</h2>
+        <h2 class="adoptame-title">Adoptame 🐶</h2>
         <p class="adoptame-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente voluptate quam delectus architecto suscipit laudantium neque placeat ipsum illum harum hic ea quidem, facere soluta repellat at nobis beatae ipsa.</p>
       </div>
     </section>
