--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- Blog -->
     <section class="blog">
       <div class="container">
-        <h2 class="blog-title">Nuestro Blog 🦦</h2>
+        <h2 class="blog-title"> 🦦 Nuestro Blog </h2>
 
         <div class="articulos">
 
