--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
   <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=PT+Sans:wght@400;700&display=swap"
     rel="stylesheet">
   <title>Blog de Mascotas</title>
+  <title>Meta Tags — Preview, Edit and Generate</title>
+<meta name="title" content="Blog de Mascotas">
+<meta name="description" content="Aquí podrás encontrar curiosidades, vídeos, consejos y muchas cosas más. Si buscas todo lo relacionado con nuestras mascotas, estás en el lugar ideal.">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://mi-primer-blog-mascotas.netlify.app/">
+<meta property="og:title" content="Meta Tags — Preview, Edit and Generate">
+<meta property="og:description" content="Aquí podrás encontrar curiosidades, vídeos, consejos y muchas cosas más. Si buscas todo lo relacionado con nuestras mascotas, estás en el lugar ideal.">
+<meta property="og:image" content="Blog.png">
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://mi-primer-blog-mascotas.netlify.app/">
+<meta property="twitter:title" content="Meta Tags — Preview, Edit and Generate">
+<meta property="twitter:description" content="With Meta Tags you can edit and experiment with your content then preview how your webpage will look on Google, Facebook, Twitter and more!">
+<meta property="twitter:image" content="Blog.png">
   <link rel="icon" href="favicon.ico">
   <link rel="stylesheet" href="style.css">
 </head>
@@ -39,7 +56,7 @@
 
       <div class="container">
         <h2 class="hero-title">Un blog sobre el cuidado y consejos para tus mascotas</h2>
-        <p class="hero-description">Aquí podrás encontrar curiosidades, vídeos, consejos y muchas cosas más. Si buscas todo lo relacionado con nuestras mascotas, estás en el lugar ideal.</p>
+        <p class="hero-description"></p>
       </div>
     </section>
 
