Agregando SEO red social

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <meta property="twitter:card" content="summary_large_image">
 <meta property="twitter:url" content="https://mi-primer-blog-mascotas.netlify.app/">
 <meta property="twitter:title" content="Meta Tags — Preview, Edit and Generate">
-<meta property="twitter:description" content="With Meta Tags you can edit and experiment with your content then preview how your webpage will look on Google, Facebook, Twitter and more!">
+<meta property="twitter:description" content="Aquí podrás encontrar curiosidades, vídeos, consejos y muchas cosas más. Si buscas todo lo relacionado con nuestras mascotas, estás en el lugar ideal.">
 <meta property="twitter:image" content="Blog.png">
   <link rel="icon" href="favicon.ico">
   <link rel="stylesheet" href="style.css">
